# playai-multi-agent-lite

./: .gitignore  Dockerfile  README.md  app.sh  app_server.sh  gunicorn_config.py  main.py  pyproject.toml  run_server.py  test_cases.py
core/: orchestra.py
core/config/: allowed_hosts.py  gemini_model_config.py  logging_config.py  model_config.py  model_predefine_config.py
core/llmapi/: gemini_api.py  local_llm_api.py
core/prompt/: agent_predefine_prompt.py  gemini_prompt.py
core/prompt/template/: agent_predefine_prompt.py
core/routers/: approuter.py
examples/: chat_history_conversion.py
test_case/: test_cases.py  test_cases_simple_mode.py  test_webservice.py
